hard-gists/5b62847bf934785119ffb16be636e073/run.log
=== Docker Run Log for 5b62847bf934785119ffb16be636e073 ===
Started at: Mi 29. Okt 16:13:37 CET 2025

[2025-10-29 16:13:37] START: Running container for 5b62847bf934785119ffb16be636e073
[2025-10-29 16:13:38] SUCCESS: Container 2612c2c9a99d41417f5f93086698ba1f21d949f7b6d8468767d0ba7835bdb915 started for 5b62847bf934785119ffb16be636e073
=== Container logs for 5b62847bf934785119ffb16be636e073 ===
  File "/snippet.py", line 9
    print 'This script is intended to be run from the sharing extension.'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5b62847bf934785119ffb16be636e073 ===
[2025-10-29 16:13:40] INFO: Container 2612c2c9a99d41417f5f93086698ba1f21d949f7b6d8468767d0ba7835bdb915 has stopped
